# ParallelizationForMPC_upgrade

./: AUTHORS.md  README.md
.github/: dependabot.yml
backend_submodules/: change_registy_boost.sh
benchmarks/: MOTIONmixingImportantOutput.txt  MOTIONmixingOtherOutput.txt  SPDZmixingImportantOutput.txt  SPDZmixingOtherOutput.txt  biometric.py  biometric_fast.py  biometric_fast_bounds.json  chapterfour_figure_12.py  commRounds_SPDZmixingImportantOutput.txt  commRounds_SPDZmixingOtherOutput.txt  convex_hull.py  convex_hull_bounds.json  count_102.py  count_102_bounds.json  count_10s.py  count_10s_bounds.json  count_123.py  cryptonets_convolution_naive_bounds.json  cryptonets_max_pooling.py  cryptonets_max_pooling_bounds.json  dataSent_SPDZmixingImportantOutput.txt  dataSent_SPDZmixingOtherOutput.txt  db_cross_join_bounds.json  db_cross_join_trivial_bounds.json  db_variance.py  db_variance_bounds.json  floyd_warshall_bounds.json  histogram.py  histogram_bounds.json  inner_product.py  kmeans_iteration_bounds.json  longest_102.py  longest_102_bounds.json  longest_1s.py  longest_1s_bounds.json  longest_even_0.py  longest_even_0_bounds.json  longest_odd_10.py  matrix_multiply_bounds.json  max_dist_between_syms.py  (+11 more)
compiler/: 2024_12_30_21_31_10_cost_table.txt  2025_01_21_04_38_14_cost_table.txt  9999_20ITER_MOTION_cost_table.txt  9999_20ITER_cost_table.json  9999_2ITER_table.txt  9999_LOCAL_table.txt  9999_UPDATED_20ITER_cost_table.json  9999_UPDATED_20ITER_table.txt  BACKUPmotionResults.json  (+44 more)
compiler/mpc_samples/MOTION/templates/: CMakeLists.txt  main.cpp  template_code.h
(+239 files in other folders)
